スクロールアニメーション設定

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,21 @@
   <body>
     <canvas id="canvas"></canvas>
 
+    <div class="scroll">
+      <div class="scroll__stage">
+        <div class="scroll__content">
+          <section class="section section01 js-section-01">
+            <div class="section__inner">
+            </div>
+          </section>
+          <section class="section section02 js-section-02">
+            <div class="section__inner">
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
